Update _config.yml footer

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "Isaac Winston"
-description: "Electrical & Mechatronic Engineer | Software Developer | Audio Engineer"
+description: "Built using Jekyll & Hosted on github pages"
 theme: minima
 
 # Your contact info (for SEO and footer)
