--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "Isaac Winston"
-description: "Built using Jekyll & Hosted on github pages"
+description: "Built with ❤️ using Jekyll | Hosted on Github Pages"
 theme: minima
 
 # Your contact info (for SEO and footer)
