Update _config.yml add prod_engineeering.md

--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,7 @@ header_pages:
   - about.md
   - projects.md
   - cv.md
+  - prod_engineeering.md
 
 # Optional: social links (shows in footer with Minima theme)
 # minima:
